package net.imshit.util.listener;

/**
 * 订阅的全体事件
 * @author Jim
 */

public enum Event {
    /* 炸弹爆炸 */
    BOMB_ACTIVATE
}
